# kindergarten-interact-scenes

./: .gitignore  .vercelignore  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: build.yml
api/: _asr.mjs  asr.js
build-assets/: .env.example  content-config.ts  gen-art.mjs  gen-grandpa-tts.mjs  generate.ts  make-placeholders.sh  mimo-client.ts  prompts.ts
docs/: ART-BRIEF.md  RUNBOOK.md
docs/superpowers/plans/: 2026-05-31-kindergarten-oral-competition-app.md
docs/superpowers/specs/: 2026-05-31-kindergarten-oral-competition-design.md  2026-06-02-voice-interaction-vercel-design.md
public/: manifest.webmanifest  sw.js
src/: answer.ts  app-controller.ts  asr-client.ts  audio-player.ts  config.ts  content.json  content.ts  judge.ts  main.ts  native-asr.ts  recorder.ts  render.ts  selection.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/src/: asr.rs  commands.rs  lib.rs  mic.rs  secret.rs  xor.rs
src/styles/: memphis.css
tests/: answer.test.ts  app-controller.test.ts  audio-player.test.ts  content-config.test.ts  content.test.ts  generate.test.ts  judge.test.ts  mimo-client.test.ts  prompts.test.ts  render.test.ts  selection.test.ts
tests/fixtures/: sample-content.json
